--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@heroicons/react": "^1.0.3",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.6.1",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
