--- a/package.json
+++ b/package.json
@@ -6,20 +6,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.3",
+    "@heroicons/react": "^1.0.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.6.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "firebase": "8.10.0",
-    "next": "latest",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-firebase-hooks": "^3.0.4",
-    "react-redux": "^7.2.4"
+    "react-firebase-hooks": "^3.0.5",
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^2.2.19"
   }
 }
