--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.5",
     "react-redux": "^7.2.6",
-    "react-responsive-carousel": "^3.2.22"
+    "react-responsive-carousel": "^3.2.22",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
